[package]
name = "fizzbuzz-http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["tokio", "http1"] }
tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[[bin]]
name = "fizzbuzz-http"
path = "main.rs"
